<resources>
    <string name="app_name">Moodify</string>
    <string name="playlist">Playlist</string>
    <string name="home_header">Set the mood</string>
    <string name="button_go">GO!</string>
    <string name="mood">Mood</string>
    <string name="genre">Genre</string>
    <string name="songs_count">How many songs?</string>
    <string name="search">Search..</string>
    <string name="results">Results</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>

    <string name="kw_808s">808s &amp; Heartbreak</string>
    <string name="royalty">ROYALTY</string>
    <string name="ye">YE</string>
    <string name="surf">Surf</string>
    <string name="madvillainy">Madvillainy</string>





    <string-array name="moods_array">
        <item>Mood..</item>
        <item>Sad</item>
        <item>Happy</item>
        <item>Chill</item>
        <item>Christmas</item>
        <item>Party</item>
        <item>Workout</item>
        <item>Somber</item>
        <item>Motivation</item>
        <item>Focus</item>
    </string-array>

    <string-array name="genres_array">
        <item>Genre..</item>
        <item>Rock</item>
        <item>Pop</item>
        <item>Hip-Hop</item>
        <item>K-Pop</item>
        <item>Country</item>
        <item>Metal</item>
        <item>Classical</item>
    </string-array>

    <string-array name="count_array">
        <item>How many songs?</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>
