<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="80dp"
        android:text="@string/home_header"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/s_mood"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/spinner_border"
        android:prompt="@string/mood"
        android:entries="@array/moods_array"
        android:minHeight="30dp"
        android:tooltipText="@string/mood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/s_genre"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/spinner_border"
        android:minHeight="30dp"
        android:prompt="@string/genre"
        android:entries="@array/genres_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_mood" />

    <Spinner
        android:id="@+id/s_songs"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/spinner_border"
        android:minHeight="30dp"
        android:prompt="@string/songs"
        android:entries="@array/count_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_genre" />

    <Button
        android:id="@+id/btn_go"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:width="20dp"
        android:height="20dp"
        android:background="@drawable/button_circle"
        android:text="@string/button_go"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_songs" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_circle"
        android:text="Search"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_songs" />

</android.support.constraint.ConstraintLayout>